--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,14 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.scss">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <div id="root"></div>
     <script src="https://cdn.apple-mapkit.com/mk/5.x.x/mapkit.js"></script>
-    <script src="dist/bundle.js"></script>
+    <script src="index.tsx"></script>
 </body>
 
 </html>
