Optimize favicon sizes and add iOS web app support

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,7 +3,23 @@
 <html>
     <head>
         <title>Route Planner</title>
-        <link rel="shortcut icon" href="images/favicon.png" />
+        <link rel="shortcut icon" href="images/web/favicon.ico" />
+        <link rel="icon" sizes="16x16 32x32 64x64" href="images/web/favicon.ico" />
+        <link rel="icon" type="image/png" sizes="196x196" href="images/web/favicon-192.png" />
+        <link rel="icon" type="image/png" sizes="160x160" href="images/web/favicon-160.png" />
+        <link rel="icon" type="image/png" sizes="96x96" href="images/web/favicon-96.png" />
+        <link rel="icon" type="image/png" sizes="64x64" href="images/web/favicon-64.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="images/web/favicon-32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="images/web/favicon-16.png" />
+        <link rel="apple-touch-icon" href="images/app/favicon-57.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="images/app/favicon-114.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="images/app/favicon-72.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="images/app/favicon-144.png" />
+        <link rel="apple-touch-icon" sizes="60x60" href="images/app/favicon-60.png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="images/app/favicon-120.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="images/app/favicon-76.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="images/app/favicon-152.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="images/app/favicon-180.png" />
         <link
             rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
@@ -12,7 +28,9 @@
         />
         <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css" />
         <link rel="stylesheet" href="./styles/main.scss" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     </head>
 
     <body>
