Replace client-side strings with old app name

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Route Planner</title>
+        <title>QuickRoute</title>
         <link rel="shortcut icon" href="images/web/favicon.ico" />
         <link rel="icon" sizes="16x16 32x32 64x64" href="images/web/favicon.ico" />
         <link rel="icon" type="image/png" sizes="196x196" href="images/web/favicon-192.png" />
