--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css" />
-        <link rel="stylesheet" href="./styles/main.scss" />
+        <link rel="stylesheet" href="./styles/index.scss" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
